# verified-nrkernel

./: .gitignore  README.md
.github/workflows/: verus.yml
hlspec_code/: .gitignore  Makefile
hlspec_code/c_programs/: map_unmap_fault.c  threads_10.txt  threads_4.c  todos.txt  two_threads_map.c
hlspec_code/franken_programs/: map_unmap_fault.c  mmap_userspace.h  threads_4.c  two_threads_map.c  verified_mmap_ioctl.h
linux/: .gitignore  Makefile
linux/include/: verified_mmap_ioctl.h
linux/module/: .gitignore  Makefile  module.c  verified_mmap_main.c  verified_mmap_main_alt.c
linux/tools/: bridge-up.sh  download-linux-image.sh  exec-qemu-test.sh  malloc-test-in-qemu.sh  qemu-start.sh  test-in-qemu.sh
linux/user/: .gitignore  Makefile  malloc_test.c  verified_mmap_test.c
macrobenchmarks/: .gitignore  Cargo.toml  stdout
macrobenchmarks/src/: memcached.rs
measure-verification-time/: 2765c751a3e6a8b27810c12d2b07b5f6b415b4df-verification-stats.json  Cargo.toml  plot.py
microbenchmarks/: rust-toolchain
page-table/: Cargo.toml  liblib.rlib
page-table/src/: extra.rs  hlspec_user.rs  lib.rs  os_trace.rs  theorem.rs
page-table/src/impl_u/: l1.rs  l2_impl.rs  os_refinement.rs  verified_impl.rs  wrapped_token.rs
page-table/src/spec_t/: hlspec.rs  mod.rs  os.rs  os_code_vc.rs  os_ext.rs  os_invariant.rs
page-table/src/spec_t/mmu/: defs.rs  mod.rs  pt_mem.rs  rl0.rs  rl1.rs  rl2.rs  rl3.rs  translation.rs
tools/: doc.sh  get-line-count.sh  hlspec-verify.sh  measure-verification-times.sh  plot-verification-times.py  update-verus.sh  verify.sh  verus-linecount-fix.patch
(+51 files in other folders)
